worked on html header for posts and also got markdown blockquotes working and styled them a little bit

--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,11 @@ title: "Douglas' Blog" # the name of your site, e.g. ACME Corp.
 # highlighter: rouge
 
 markdown: kramdown
+# markdown: CustomProcessor
 highlighter: rouge
 kramdown:
   input: GFM
   syntax_highlighter: rouge
+
 
 
